--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 I am a wikipedia user, and a developer, for links see:
 
-* [enwp.org/User:Zppix](Wikipedia User Page)
-* [wikiopen.tk](Wikiopen -- CEO/CTO)
-* [t.me/Zppix](Telegram)
+* [Wikipedia User Page](enwp.org/User:Zppix)
+* [Wikiopen -- CEO/CTO](wikiopen.tk)
+* [Telegram](t.me/Zppix)
 * IRC: Zppix on Freenode
