--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 I am a wikipedia user, and a developer, for links see:
 
 * [Wikipedia User Page](enwp.org/User:Zppix)
-* [Wikiopen -- CEO/CTO](wikiopen.tk)
+* [Wikiopen CEO/CTO](wikiopen.tk)
 * [Telegram](t.me/Zppix)
 * IRC: Zppix on Freenode
