--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 I am a wikipedia user, and a developer, for links see:
 
-* [Wikipedia User Page](enwp.org/User:Zppix)
-* [Wikiopen CEO/CTO](wikiopen.tk)
+* [Wikipedia User Page](www.enwp.org/User:Zppix)
+* [Wikiopen CEO/CTO](www.wikiopen.tk)
 * [Telegram](t.me/Zppix)
 * IRC: Zppix on Freenode
