--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 I am a wikipedia user, and a developer, for links see:
 
-* [Wikipedia User Page](www.enwp.org/User:Zppix)
-* [Wikiopen CEO/CTO](www.wikiopen.tk)
-* [Telegram](t.me/Zppix)
+* [Wikipedia User Page](https://www.enwp.org/User:Zppix)
+* [Wikiopen CEO/CTO](https://www.wikiopen.tk)
+* [Telegram](https://t.me/Zppix)
 * IRC: Zppix on Freenode
