--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/assets/css/style.css?v=14503cd4acae0591afc392946308e8a56a432d5b">
 
 <!-- Begin Jekyll SEO tag v2.3.0 -->
-<title>About | Zppix’s Website</title>
-<meta property="og:title" content="About">
+<title>Contact | Zppix’s Website</title>
+<meta property="og:title" content="Contact">
 <meta property="og:locale" content="en_US">
 <meta name="description" content="Zppix’s Personal Website">
 <meta property="og:description" content="Zppix’s Personal Website">
