--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,9 @@
 
   </head>
   <body>
+<form>
+  <input type="button" value="Back to homepage!" onclick="history.back()">
+</form>
   <div class="container">  
   <form id="contact" action="" method="post">
     <h3>Contact me</h3>
