--- a/contact.html
+++ b/contact.html
@@ -24,24 +24,5 @@
 <form>
   <input type="button" value="Back to homepage!" onclick="history.back()">
 </form>
-  <div class="container">  
-  <form id="contact" action="" method="post">
-    <h3>Contact me</h3>
-    <h4>Contact Zppix using this form.</h4>
-    <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Your Email Address" type="email" tabindex="2" required>
-    </fieldset>
-    <fieldset>
-      <textarea placeholder="Message" tabindex="5" required></textarea>
-    </fieldset>
-    <fieldset>
-      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-    </fieldset>
-  </form>
- 
-  
-</div>
-</body>
+  <iframe width="100%" height="764" allowTransparency="true" frameborder="0" scrolling="no" style="border:none" src="http://www.emailmeform.com/builder/embed/x2mCf2e5DHvo6he"><a href="http://www.emailmeform.com/builder/embed/x2mCf2e5DHvo6he">Fill out form.</a></iframe>
+    </body>
