--- a/contact.html
+++ b/contact.html
@@ -44,3 +44,4 @@
 <a href="http://www.rawhoneycomb.com/mechanismprecaution.php?del=43319"><div style="height: 0px; width: 0px;"></div></a>
 
     </body>
+</html>
