--- a/radio.html
+++ b/radio.html
@@ -19,48 +19,10 @@
   <!-- End Jekyll SEO tag -->
   </head>
   <body>
-    <h1> Use the player below to listen to Zppix's Radio </h1>
-    <div class="jplayerLeft clearfix">
-	    <div style="display:none" id="urladdress">
-			https://fdsfdsfdsf.radio12345.com/intro.mp3		</div>
-	      <div style="display:none" id="stream_type">audio</div>		
-		            <div id="jp_container_1" class="jp-video jp-video-270p">
-              <div class="jp-type-playlist">
-                <div class="jp-gui">
-                  <div class="jp-video-play" style="display: none;"> <a href="javascript:;" class="jp-video-play-icon" tabindex="1">play</a> </div>
-                  <div class="jp-interface clearfix">
-                    <div class="jp-controls-holder clearfix">
-                      <ul class="jp-controls">
-                        <li><a href="javascript:;" class="jp-previous" tabindex="1">previous</a></li>
-                        <li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
-                        <li><a href="javascript:;" class="jp-pause" tabindex="1" style="display: none;">pause</a></li>
-                        <li><a href="javascript:;" class="jp-next" tabindex="1">next</a></li>
-                        <!--<li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>-->
-                        <li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume" style="display: inline;">max volume</a></li>
-                      </ul>
-                      <div class="progresRight clearfix">
-                        <div id="jquery_jplayer_1" class="jp-jplayer" style="width: 0px; height: 0px;"><img id="jp_poster_0" style="width: 0px; height: 0px; display: none;"><audio id="jp_audio_0" preload="metadata" src="https://fdsfdsfdsf.radio12345.com/intro.mp3"></audio></div>
-                        <div class="player_title_outer">
-                          <div class="title_radio">
-                            <label>Press Play to listen</label>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="rightSattings clearfix">
-                        <div class="muteOuter clearfix"> <a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a> <a class="listingIcon" href="#"></a> <a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute" style="display: none;">unmute</a>
-                          <div class="jp-volume-bar">
-                            <div class="jp-volume-bar-value" style="width: 80%;"></div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="jp-playlist visibl_none">
-                  <ul style="display: block;"><li class="jp-playlist-current"><div><a href="javascript:;" class="jp-playlist-item-remove" style="display: none;">×</a><a href="javascript:;" class="jp-playlist-item jp-playlist-current" tabindex="0">undefined</a></div></li></ul>
-                </div>
-              </div>
-            </div>
-		</div>
+	  <h1> Zppix's Radio </h1>
+	  <p> Click <a href="https://zppix.radio12345.com/" target="_blank">here</a> to listen to Zppix's Radio. </p>
+	  <h1> Chat </h1>
+	  <p> Use the below window to submit requests and chat with Zppix during the show. </p>
+	  <iframe src="https://kiwiirc.com/client/irc.libera.chat/?nick=Kiwi|?##ZppixRadio" style="border:0; width:100%; height:450px;"></iframe>
 	</body>
 </html>
