--- a/radio.html
+++ b/radio.html
@@ -19,6 +19,9 @@
   <!-- End Jekyll SEO tag -->
   </head>
   <body>
+	<form>
+  	<input type="button" value="Back to homepage!" onclick="history.back()">
+	</form>
 	  <h1> Zppix's Radio </h1>
 	  <p> Click <a href="https://zppix.radio12345.com/" target="_blank">here</a> to listen to Zppix's Radio. </p>
 	  <h1> Chat </h1>
