--- a/radio.html
+++ b/radio.html
@@ -20,7 +20,7 @@
   </head>
   <body>
 	<form>
-  	<input type="button" value="Back to homepage!" onclick="history.back()">
+  	<input type="button" value="Back to homepage!" onclick="window.location.href='https://zppix.tk/'">
 	</form>
 	  <h1> Zppix's Radio </h1>
 	  <p> Click <a href="https://zppix.radio12345.com/" target="_blank">here</a> to listen to Zppix's Radio. </p>
